# applepie-blog

./: .gitignore  Cargo.toml  database.sqlite3  test.txt
src/: lib.rs  main.rs
src/routes/: checkpass.rs  index.rs  mod.rs  show_post.rs  styles_handler.rs
src/routes/api/: checkpass.rs  delete_post.rs  mod.rs  new_post.rs  post_list.rs
src/routes/handlers/: image_handler.rs  mod.rs  styles_handler.rs
src/static/: styles.css
src/templates/: base.html  index.html  post.html
