[package]
name = "applepie-blog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
hex = "0.4.3"
http = "0.2.9"
lazy_static = "1.4.0"
mime_guess = "2.0.4"
serde = {version = "1.0.164", features = ["derive"]}
serde_json = "1.0.96"
sha2 = "0.10.6"
tera = "1.19.0"
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.6.3", features = [ "runtime-tokio-native-tls", "sqlite" ] }